--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Web App</title>
+    <title></title>
 </head>
 <body>
-    <h1>Smart AI Web App</h1>
-    
-    <!-- Input area for user to ask AI a question -->
-    <input type="text" id="userInput" placeholder="Ask a question...">
-    <button onclick="getAIResponse()">Get AI Response</button>
-
-    <!-- Display area for AI response -->
-    <p id="aiResponse"></p>
-
+    <h1>About Vedansh Gautam</h1>
+    <p>My name is Vedansh Gautam born in sagar madhya pradesh india.
+    <br>My address is avtar nagar makronia 470004.
+    <br>My mother's name is Mrs. Savita Gautam and my father's name is Dr. Rakesh Kumar Gautam.
+    <br>I pursued my 10 from kv2 with 89% and 12 from utkarsh public school with 89% and now i am studyingin jiwaji university.</p>
     <script src="script.js"></script>
 </body>
 </html>
