--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>My name is Vedansh Gautam born in sagar madhya pradesh india.
     <br>My address is avtar nagar makronia 470004.
     <br>My mother's name is Mrs. Savita Gautam and my father's name is Dr. Rakesh Kumar Gautam.
-    <br>I pursued my 10 from kv2 with 89% and 12 from utkarsh public school with 89% and now i am studyingin jiwaji university.</p>
+    <br>I pursued my 10 from kv2 with 89% and 12 from utkarsh public school with 89% and now i am studying in jiwaji university as engineering student.</p>
     <script src="script.js"></script>
 </body>
 </html>
