--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <br>My mother's name is Mrs. Savita Gautam and my father's name is Dr. Rakesh Kumar Gautam.
     <br>I pursued my 10 from kv2 with 89% and 12 from utkarsh public school with 89% and now i am studying in jiwaji university as engineering student.</p>
     <script src="script.js"></script>
+
+
+
+
+
+
+    <p><br>the page is under progress</p>
 </body>
 </html>
