--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
+    <img src="ved.jpg" alt="vedanshgautam" width="500" height="600">
     <h1>About Vedansh Gautam</h1>
     <p>My name is Vedansh Gautam born in sagar madhya pradesh india.
     <br>My address is avtar nagar makronia 470004.
