--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
-<body>
-    <img src="IMG-20240113-WA0008.jpg" width="333" height="600" text-align: center;>
+<body><div class="center">
+    <img src="IMG-20240113-WA0008.jpg" width="333" height="600" text-align:center;></div>
     <h1>About Vedansh Gautam</h1>
     <p>My name is Vedansh Gautam born in sagar madhya pradesh india.
     <br>My address is avtar nagar makronia 470004.
