--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body><div class="center">
-    <img src="IMG-20240113-WA0008.jpg" width="345" height="600" text-align:center;></div>
+    <img src="IMG-20240113-WA0008.jpg" text-align:center;></div>
     <h1>About Vedansh Gautam</h1>
     <p>My name is Vedansh Gautam born in sagar madhya pradesh india.
     <br>My address is avtar nagar makronia 470004.
